fix: z-index

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -49,6 +49,7 @@ body {
 
   &::after {
     position: absolute;
+    z-index: -1;
     width: 250px;
     height: 250px;
     content: "";
